--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,12 @@
   ],
   "minimum-stability": "stable",
   "require-dev": {
-    "symfony/var-dumper": "^7.1"
+    "symfony/var-dumper": "^7.1",
+    "pestphp/pest": "^2.34"
+  },
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
   }
 }
